--- a/doc/agile/v1/sprint_backlog_00.org
+++ b/doc/agile/v1/sprint_backlog_00.org
@@ -13,27 +13,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-28 Tue 12:08]
+#+CAPTION: Clock summary at [2017-03-28 Tue 13:15]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *38:06* |       |       | 100.0 |
+| *Total time*                                                                | *39:11* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 38:06   |       |       | 100.0 |
-| Active                                                                      |         | 38:06 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:16 |   3.3 |
+| Stories                                                                     | 39:11   |       |       | 100.0 |
+| Active                                                                      |         | 39:11 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:16 |   3.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.3 |
 | COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   2.1 |
 | COMPLETED Disable common support on ODB for a single database               |         |       |  0:08 |   0.3 |
-| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  22.1 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  21.5 |
 | COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.4 |
-| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  16.2 |
+| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  15.8 |
 | COMPLETED ODB options does not cater for types placed in namespaces         |         |       |  0:16 |   0.7 |
-| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  37.9 |
+| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  36.8 |
 | COMPLETED Do not use underscores in ORM stereotypes                         |         |       |  0:13 |   0.6 |
-| STARTED Allow users to override string prefixes in test data                |         |       |  1:52 |   4.9 |
-| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   5.0 |
-| STARTED Add msbuild targets for ODB                                         |         |       |  1:32 |   4.0 |
+| STARTED Allow users to override string prefixes in test data                |         |       |  1:52 |   4.8 |
+| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   4.9 |
+| STARTED Add msbuild targets for ODB                                         |         |       |  2:37 |   6.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -448,6 +448,7 @@ This also means we can add the ODB files to the visual studio project
 even before they get generated.
 
 *** STARTED Add msbuild targets for ODB                               :story:
+    CLOCK: [2017-03-28 Tue 12:09]--[2017-03-28 Tue 13:14] =>  1:05
     CLOCK: [2017-03-28 Tue 11:20]--[2017-03-28 Tue 12:08] =>  0:48
     CLOCK: [2017-03-28 Tue 10:35]--[2017-03-28 Tue 11:19] =>  0:44
 
