--- a/doc/agile/v1/sprint_backlog_00.org
+++ b/doc/agile/v1/sprint_backlog_00.org
@@ -13,27 +13,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-28 Tue 15:25]
+#+CAPTION: Clock summary at [2017-03-28 Tue 20:30]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *40:23* |       |       | 100.0 |
+| *Total time*                                                                | *41:22* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 40:23   |       |       | 100.0 |
-| Active                                                                      |         | 40:23 |       | 100.0 |
+| Stories                                                                     | 41:22   |       |       | 100.0 |
+| Active                                                                      |         | 41:22 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:16 |   3.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.2 |
 | COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   2.0 |
 | COMPLETED Disable common support on ODB for a single database               |         |       |  0:08 |   0.3 |
-| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  20.9 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  20.4 |
 | COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.3 |
-| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  15.3 |
-| COMPLETED ODB options does not cater for types placed in namespaces         |         |       |  0:16 |   0.7 |
-| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  35.7 |
+| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  14.9 |
+| COMPLETED ODB options does not cater for types placed in namespaces         |         |       |  0:16 |   0.6 |
+| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  34.9 |
 | COMPLETED Do not use underscores in ORM stereotypes                         |         |       |  0:13 |   0.5 |
-| COMPLETED Add msbuild targets for ODB                                       |         |       |  3:49 |   9.5 |
-| STARTED Allow users to override string prefixes in test data                |         |       |  1:52 |   4.6 |
-| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   4.7 |
+| COMPLETED Add msbuild targets for ODB                                       |         |       |  3:49 |   9.2 |
+| STARTED Allow users to override string prefixes in test data                |         |       |  1:52 |   4.5 |
+| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   4.6 |
+| STARTED Add boilerplate for XML files                                       |         |       |  0:59 |   2.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -495,6 +496,12 @@ manually deleting them.
 
 This also means we can add the ODB files to the visual studio project
 even before they get generated.
+
+*** STARTED Add boilerplate for XML files                             :story:
+    CLOCK: [2017-03-28 Tue 19:31]--[2017-03-28 Tue 20:30] =>  0:59
+
+At present our boilerplate machinery does not support XML. Add support
+for it.
 
 *** Generate Redis get/set code                                       :story:
 
