--- a/doc/agile/v1/sprint_backlog_00.org
+++ b/doc/agile/v1/sprint_backlog_00.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-28 Tue 20:55]
+#+CAPTION: Clock summary at [2017-03-28 Tue 21:00]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *41:45* |       |       | 100.0 |
+| *Total time*                                                                | *41:50* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 41:45   |       |       | 100.0 |
-| Active                                                                      |         | 41:45 |       | 100.0 |
+| Stories                                                                     | 41:50   |       |       | 100.0 |
+| Active                                                                      |         | 41:50 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:16 |   3.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.2 |
 | COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   2.0 |
@@ -29,12 +29,12 @@
 | COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.3 |
 | COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  14.8 |
 | COMPLETED ODB options does not cater for types placed in namespaces         |         |       |  0:16 |   0.6 |
-| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  34.6 |
+| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  34.5 |
 | COMPLETED Do not use underscores in ORM stereotypes                         |         |       |  0:13 |   0.5 |
 | COMPLETED Add msbuild targets for ODB                                       |         |       |  3:49 |   9.1 |
+| COMPLETED Add boilerplate for XML files                                     |         |       |  1:27 |   3.5 |
 | STARTED Allow users to override string prefixes in test data                |         |       |  1:52 |   4.5 |
 | STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   4.6 |
-| STARTED Add boilerplate for XML files                                       |         |       |  1:22 |   3.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -386,6 +386,15 @@ Sample:
 </Project>
 #+end_example
 
+*** COMPLETED Add boilerplate for XML files                           :story:
+    CLOSED: [2017-03-28 Tue 20:56]
+    CLOCK: [2017-03-28 Tue 20:39]--[2017-03-28 Tue 21:00] =>  0:21
+    CLOCK: [2017-03-28 Tue 20:31]--[2017-03-28 Tue 20:38] =>  0:07
+    CLOCK: [2017-03-28 Tue 19:31]--[2017-03-28 Tue 20:30] =>  0:59
+
+At present our boilerplate machinery does not support XML. Add support
+for it.
+
 *** STARTED Allow users to override string prefixes in test data      :story:
     CLOCK: [2017-03-26 Sun 10:15]--[2017-03-26 Sun 11:30] =>  1:15
     CLOCK: [2017-03-21 Tue 07:10]--[2017-03-21 Tue 07:24] =>  0:14
@@ -496,14 +505,6 @@ manually deleting them.
 
 This also means we can add the ODB files to the visual studio project
 even before they get generated.
-
-*** STARTED Add boilerplate for XML files                             :story:
-    CLOCK: [2017-03-28 Tue 20:39]--[2017-03-28 Tue 20:55] =>  0:16
-    CLOCK: [2017-03-28 Tue 20:31]--[2017-03-28 Tue 20:38] =>  0:07
-    CLOCK: [2017-03-28 Tue 19:31]--[2017-03-28 Tue 20:30] =>  0:59
-
-At present our boilerplate machinery does not support XML. Add support
-for it.
 
 *** Generate Redis get/set code                                       :story:
 
