--- a/doc/agile/v1/sprint_backlog_00.org
+++ b/doc/agile/v1/sprint_backlog_00.org
@@ -13,28 +13,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-29 Wed 06:57]
+#+CAPTION: Clock summary at [2017-03-29 Wed 18:10]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *42:23* |       |       | 100.0 |
+| *Total time*                                                                | *42:55* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 42:23   |       |       | 100.0 |
-| Active                                                                      |         | 42:23 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:49 |   4.3 |
+| Stories                                                                     | 42:55   |       |       | 100.0 |
+| Active                                                                      |         | 42:55 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:16 |   3.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.2 |
 | COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   1.9 |
 | COMPLETED Disable common support on ODB for a single database               |         |       |  0:08 |   0.3 |
-| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  19.9 |
-| COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.3 |
-| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  14.6 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  19.7 |
+| COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.2 |
+| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  14.4 |
 | COMPLETED ODB options does not cater for types placed in namespaces         |         |       |  0:16 |   0.6 |
-| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  34.1 |
+| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  33.6 |
 | COMPLETED Do not use underscores in ORM stereotypes                         |         |       |  0:13 |   0.5 |
-| COMPLETED Add msbuild targets for ODB                                       |         |       |  3:49 |   9.0 |
+| COMPLETED Add msbuild targets for ODB                                       |         |       |  3:49 |   8.9 |
 | COMPLETED Add boilerplate for XML files                                     |         |       |  1:27 |   3.4 |
-| STARTED Allow users to override string prefixes in test data                |         |       |  1:52 |   4.4 |
+| COMPLETED Exceptions in C++ 98 have C++ 14 keywords                         |         |       |  0:32 |   1.2 |
+| STARTED Allow users to override string prefixes in test data                |         |       |  1:52 |   4.3 |
 | STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   4.5 |
+| STARTED Add a top-level "Visual Studio" knob                                |         |       |  0:33 |   1.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -394,6 +396,14 @@ Sample:
 
 At present our boilerplate machinery does not support XML. Add support
 for it.
+
+*** COMPLETED Exceptions in C++ 98 have C++ 14 keywords               :story:
+    CLOSED: [2017-03-29 Wed 17:46]
+    CLOCK: [2017-03-29 Wed 17:47]--[2017-03-29 Wed 18:10] =>  0:23
+    CLOCK: [2017-03-29 Wed 17:37]--[2017-03-29 Wed 17:46] =>  0:09
+
+We need to add exceptions to the C++ 98 test model. At present they
+are using C++ 14 keywords and thus causing errors.
 
 *** STARTED Allow users to override string prefixes in test data      :story:
     CLOCK: [2017-03-26 Sun 10:15]--[2017-03-26 Sun 11:30] =>  1:15
