--- a/doc/agile/v1/sprint_backlog_00.org
+++ b/doc/agile/v1/sprint_backlog_00.org
@@ -13,31 +13,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-29 Wed 22:17]
+#+CAPTION: Clock summary at [2017-03-29 Wed 22:50]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *43:40* |       |       | 100.0 |
+| *Total time*                                                                | *44:12* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 43:40   |       |       | 100.0 |
-| Active                                                                      |         | 43:40 |       | 100.0 |
+| Stories                                                                     | 44:12   |       |       | 100.0 |
+| Active                                                                      |         | 44:12 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:16 |   2.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.1 |
-| COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   1.9 |
+| COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   1.8 |
 | COMPLETED Disable common support on ODB for a single database               |         |       |  0:08 |   0.3 |
-| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  19.3 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  19.1 |
 | COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.2 |
-| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  14.2 |
+| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  14.0 |
 | COMPLETED ODB options does not cater for types placed in namespaces         |         |       |  0:16 |   0.6 |
-| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  33.1 |
+| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  32.7 |
 | COMPLETED Do not use underscores in ORM stereotypes                         |         |       |  0:13 |   0.5 |
-| COMPLETED Add msbuild targets for ODB                                       |         |       |  3:49 |   8.7 |
+| COMPLETED Add msbuild targets for ODB                                       |         |       |  3:49 |   8.6 |
 | COMPLETED Add boilerplate for XML files                                     |         |       |  1:27 |   3.3 |
 | COMPLETED Exceptions in C++ 98 have C++ 14 keywords                         |         |       |  0:32 |   1.2 |
-| STARTED Allow users to override string prefixes in test data                |         |       |  1:52 |   4.3 |
-| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   4.4 |
-| STARTED Add a top-level "Visual Studio" knob                                |         |       |  0:33 |   1.3 |
-| STARTED Add support for Visual Studio C++ projects                          |         |       |  0:45 |   1.7 |
+| STARTED Allow users to override string prefixes in test data                |         |       |  1:52 |   4.2 |
+| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   4.3 |
+| STARTED Add a top-level "Visual Studio" knob                                |         |       |  0:33 |   1.2 |
+| STARTED Add support for Visual Studio C++ projects                          |         |       |  1:17 |   2.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -574,6 +574,7 @@ There are several aspects:
 - the computation of the enablement.
 
 *** STARTED Add support for Visual Studio C++ projects                :story:
+    CLOCK: [2017-03-29 Wed 22:18]--[2017-03-29 Wed 22:50] =>  0:32
     CLOCK: [2017-03-29 Wed 21:41]--[2017-03-29 Wed 22:17] =>  0:36
     CLOCK: [2017-03-29 Wed 18:11]--[2017-03-29 Wed 18:20] =>  0:09
 
