--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -295,6 +295,8 @@ or:
 
 : --meta-data a=b
 
+This is the case with Upsilon.
+
 *** Do not generate upsilon proxy models                              :story:
 
 At present we are marking all types in an upsilon config as target. In
@@ -335,6 +337,8 @@ be nice to have a dynamic extension flag for ignoring.
 
 We should probably have some kind of warning to ensure users are aware
 of the types being ignored.
+
+Isn't this just using "enable=false" for all formatters?
 
 *** Add auxiliary function properties to c#                           :story:
 
@@ -680,6 +684,9 @@ the dia model:
 
 It would be nice to have this code-generated and also to cover the
 other two archives (text, binary).
+
+Users should be able to mark types with some property so that we know
+we need to generate these wrappers.
 
 *** Rename yarn types that clash with reserved keywords               :story:
 
